Retail Lending-Production/src/objects/Commission_Setting__c.object
<CustomObject>
    <fields>
        <fullName>IncSlabRan_ge__c</fullName>
        <formula>if(ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_paid_on__c, &apos;Incremental&apos;),

if(Amount_for_Slab_Comparison__c &gt;=Min_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab1__c,
(Amount_for_Slab_Comparison__c*(Slab1_Commission__c/100)),

if( Amount_for_Slab_Comparison__c &gt;=Min_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab2__c,
(Max_Slab1__c*(Slab1_Commission__c/100))+(Amount_for_Slab_Comparison__c-Max_Slab1__c)*(Slab2_Commission__c/100),

if( Amount_for_Slab_Comparison__c &gt;=Min_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab3__c,
(Max_Slab1__c*(Slab1_Commission__c/100))+((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+(Amount_for_Slab_Comparison__c-Max_Slab2__c)*(Slab3_Commission__c/100),

if( Amount_for_Slab_Comparison__c &gt;=Min_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab4__c,
(Max_Slab1__c*(Slab1_Commission__c/100))+((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100))+(Amount_for_Slab_Comparison__c-Max_Slab3__c)*(Slab4_Commission__c/100),

if(Amount_for_Slab_Comparison__c &gt;=Min_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab5__c,
(Max_Slab1__c*(Slab1_Commission__c/100))+((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100))+((Max_Slab4__c-Max_Slab3__c)*(Slab4_Commission__c/100))+(Amount_for_Slab_Comparison__c-Max_Slab4__c)*(Slab5_Commission__c/100),

if(Amount_for_Slab_Comparison__c &gt;=Min_Slab6__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab6__c,
(Max_Slab1__c*(Slab1_Commission__c/100))+((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100))+
((Max_Slab4__c-Max_Slab3__c)*(Slab4_Commission__c/100))+((Max_Slab5__c-Max_Slab4__c)*(Slab5_Commission__c/100))+
(Amount_for_Slab_Comparison__c-Max_Slab5__c)*(Slab6_Commission__c/100),0)
))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncSlabRan %ge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Involvement_in_Application_Processing__c</fullName>
        <inlineHelpText>The Number of Opportunities the user is involved in Application Processing.</inlineHelpText>
        <label>Involvement in Application Processing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Involvement_in_Lead_Generation__c</fullName>
        <label>Involvement in Lead Generation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_DB_Cum__c</fullName>
        <description>if(and(month(today())=1, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 )</description>
        <formula>if(and(month(today())=12,ispickval(Commission_paid_on__c,&apos;Cumulative&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), if((Jan_Disbursement__c&gt;Min_Slab1__c) &amp;&amp; (Jan_Disbursement__c&lt;=Max_Slab1__c), Jan_Disbursement__c * (Slab1_Commission__c /100), if((Jan_Disbursement__c&gt;=Min_Slab2__c) &amp;&amp; (Jan_Disbursement__c&lt;=Max_Slab2__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Jan_Disbursement__c-Max_Slab1__c)*(Slab2_Commission__c/100), if((Jan_Disbursement__c&gt;=Min_Slab3__c) &amp;&amp; (Jan_Disbursement__c&lt;=Max_Slab3__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Max_Slab1__c * (Slab1_Commission__c /100))+(Jan_Disbursement__c-Max_Slab3__c)*(Slab2_Commission__c/100),0))),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan DB Cum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_DB__c</fullName>
        <label>Jan DB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Disb_Based__c</fullName>
        <formula>if(and(month(today())=1,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Jan_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=1, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Disbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_RB__c</fullName>
        <label>Jan RB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Rev_Based__c</fullName>
        <formula>if(and(month(today())=1,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Jan_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=1, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_DB__c</fullName>
        <label>Jul DB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Disb_Based__c</fullName>
        <formula>if(and(month(today())=7,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Jul_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=7, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul(Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Disbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_RB__c</fullName>
        <label>Jul RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Rev_Based__c</fullName>
        <formula>if(and(month(today())=7,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Jul_Achievement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=7, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul(Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_DB__c</fullName>
        <label>Jun DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Disb_Based__c</fullName>
        <formula>if(and(month(today())=6,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Jun_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=6, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Disbursement__c</fullName>
        <label>Jun Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_RB__c</fullName>
        <label>Jun RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Rev_Based__c</fullName>
        <formula>if(and(month(today())=6,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Jun_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=6, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_DB__c</fullName>
        <label>Mar DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Disb_Based__c</fullName>
        <formula>if(and(month(today())=3,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Mar_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=3, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Disbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_RB__c</fullName>
        <label>Mar RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Rev_Based__c</fullName>
        <formula>if(and(month(today())=3,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Mar_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=3, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Slab1__c</fullName>
        <label>Max Slab1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Slab2__c</fullName>
        <label>Max Slab2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Slab3__c</fullName>
        <label>Max Slab3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_DB__c</fullName>
        <label>May DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_DIs_Based__c</fullName>
        <formula>if(and(month(today())=5,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), May_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=5, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May (DIs Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Disbursement__c</fullName>
        <label>May Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_RB__c</fullName>
        <label>May RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Rev_Based__c</fullName>
        <formula>if(and(month(today())=5,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  May_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=5, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Slab1__c</fullName>
        <label>Min Slab1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Slab2__c</fullName>
        <label>Min Slab2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Slab3__c</fullName>
        <label>Min Slab3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_DB__c</fullName>
        <label>Nov DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Disbursement__c</fullName>
        <label>Nov Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_RB__c</fullName>
        <label>Nov RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Rev_Based__c</fullName>
        <formula>if(and(month(today())=11,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Nov_Achievement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=11, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov(Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_disb__c</fullName>
        <formula>if(and(month(today())=11,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval(  Commission_based_on__c, &apos;Disbursement&apos;)), Nov_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=11, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov(Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_DB__c</fullName>
        <label>Oct DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Disbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_RB__c</fullName>
        <label>Oct RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Rev_Based__c</fullName>
        <formula>if(and(month(today())=10,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Oct_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=10, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Define Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly__c</fullName>
        <label>Period Basis</label>
        <picklist>
            <controllingField>Period__c</controllingField>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Half</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sep_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_DB__c</fullName>
        <label>Sep DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Disb__c</fullName>
        <formula>if(and(month(today())=9,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval(  Commission_based_on__c, &apos;Disbursement&apos;)), Sep_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=9, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Disbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_RB__c</fullName>
        <label>Sep RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Rev_Based__c</fullName>
        <formula>if(and(month(today())=8,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Sep_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=8, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Slab1_Commission__c</fullName>
        <label>Slab1 Commission</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slab2_Commission__c</fullName>
        <label>Slab2 Commission</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slab3_Commission__c</fullName>
        <label>Slab3 Commission</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_To_be_Achieved__c</fullName>
        <label>Target To be Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <description>(or(ispickval(field, &apos;&apos;), ispickval(filed, &apos;&apos;)))</description>
        <formula>if(and(ispickval(Period__c, &apos;Quarterly&apos;),  ispickval(Quarterly__c,&apos;Q4&apos;),(month(today())=12),ispickval( Commission_paid_on__c, &apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c , &apos;%ge&apos;), ispickval( Commission_based_on__c , &apos;Disbursement&apos;),  (Dec_Disbursement__c &lt;= Max_Slab1__c )),  (Slab1_Commission__c /100)*Dec_Disbursement__c,  Dec__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Achievement_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Revenue Generated Till Date</inlineHelpText>
        <label>Current Month Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>oct_Disb__c</fullName>
        <formula>if(and(month(today())=10,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval(  Commission_based_on__c, &apos;Disbursement&apos;)), Oct_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=10, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Achievement  Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievement Settings</pluralLabel>
    <recordTypes>
        <fullName>Achievement_Setting</fullName>
        <active>true</active>
        <description>Record Type for Achievement Setting</description>
        <label>Achievement Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bank_Commission</fullName>
        <active>true</active>
        <description>Record Type for Bank Commission Setting</description>
        <label>Bank Commission</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enter_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(  Commission_paid_on_2__c  , &quot;Amount&quot;),   Slab1_Commission__c  &lt;0.0000)</errorConditionFormula>
        <errorMessage>Enter Amount</errorMessage>
    </validationRules>
</CustomObject>